--- a/story.html
+++ b/story.html
@@ -21,7 +21,7 @@
 
     <p>For now, Bleacher Report offers a <a href="https://bleacherreport.com/articles/2789035-ranking-every-nba-teams-projected-starting-5-after-free-agency#slide7">ranking the starting five line-ups</a> of all 30 NBA teams as they are predicted to be come opening night:</p>
 
-    <blockquote>Granted, not every starting five has been assembled yet, but we’re taking our best guesses on how they’ll look opening night. (That means we aren’t magically healing injured players expected to be unavailable by that point.) We’re also using data from last season to see how the still-together units failed or predict what’s awaiting the new ones.</blockquote>
+    <blockquote><p>Granted, not every starting five has been assembled yet, but we’re taking our best guesses on how they’ll look opening night. (That means we aren’t magically healing injured players expected to be unavailable by that point.) We’re also using data from last season to see how the still-together units failed or predict what’s awaiting the new ones.</p></blockquote>
 
     <p>There should be no surprise that Golden State ranked first. Even without the immediate services of DeMarcus Cousins, the very limited 4 All-Stars +1 line-up is believed to be the biggest threat to any team taking the court.</p>
 
@@ -31,9 +31,9 @@
 
     <h3>Under the radar</h3>
 
-    The Spurs? Where did they land? Well, Bleacher Report’s Zach Buckley has them in at 12th.
+    <p>The Spurs? Where did they land? Well, Bleacher Report’s Zach Buckley has them in at 12th.</p>
 
-    So, between the Raptors and the Spurs, the rankings are thus:
+    <p>So, between the Raptors and the Spurs, the rankings are thus:</p>
 
     <ol>
       <li>Philadelphia 76ers</li>
@@ -49,10 +49,10 @@
 
     <p>What do you think? Do you agree with the rankings? I know there is room to nitpick. There’s also an argument to be made that LeBron plus any four players would rank high in the East but LeBron plus a 35-win Lakers crew and the expendable Warriors starter is not going to pull it off this season, but that may be something for the comments...</p>
   </article>
-  <section>
+  <div class="comments">
     <p>Welcome to The Thread. Join in the conversation, start your own discussion, and share your thoughts. This is the Spurs community, your Spurs community. Thanks for being here.</p>
 
     <p>Our community guidelines apply which should remind everyone to be cool, avoid personal attacks, not to troll and to watch the language.</p>
-  </section>
+  </div>
 </body>
 </html>
