--- a/story.html
+++ b/story.html
@@ -35,7 +35,7 @@
 
     <p>So, between the Raptors and the Spurs, the rankings are thus:</p>
 
-    <ol>
+    <ol start="5">
       <li>Philadelphia 76ers</li>
       <li>Utah Jazz</li>
       <li>Oklahoma City Thunder</li>
