--- a/story.html
+++ b/story.html
@@ -4,16 +4,21 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Ranking the Spurs starting five</title>
+  <link rel="stylesheet" href="reset.css">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
   <article>
     <h4>OPEN THREADS</h4>
-    <h1>Ranking the Spurs starting five</h1>
+    <div class="header"><h1>Ranking the Spurs starting five</h1></div>
     <h2>Bleacher Report released their rankings for all 30 NBA teams</h2>
     <p class="byline">By <a href="https://twitter.com/jeph_duarte">Jeph Duarte</a> | <span>Aug 5, 2018, 6:00am CDT</span></p>
 
     <figure>
-      <img src="spurs.jpg" alt="Spurs">
+      <img src="spurs.jpg" width="620px" alt="Spurs">
       <figcaption>Soobum Im / USA TODAY Sports</figcaption>
     </figure>
 
