--- a/story.html
+++ b/story.html
@@ -13,7 +13,7 @@
 <body>
   <article>
     <h4>OPEN THREADS</h4>
-    <div class="header"><h1>Ranking the Spurs starting five</h1></div>
+    <h1>Ranking the Spurs starting five</h1>
     <h2>Bleacher Report released their rankings for all 30 NBA teams</h2>
     <p class="byline">By <a href="https://twitter.com/jeph_duarte">Jeph Duarte</a> | <span>Aug 5, 2018, 6:00am CDT</span></p>
 
